--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
     <body>
         <section class="container">
             <section class="card">
-                <img src="./IMAGENS/bugatti.png" class="card-image" alt="imagem de uma bugatti">
+                <img src="IMAGENS/bugatti.png" class="card-image" alt="imagem de uma bugatti">
                 <h2>CAR 1</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque voluptate quis qui, repellat enim odit ducimus. Debitis iure ratione aliquam, error exercitationem illum aliquid autem eaque aspernatur. Possimus, mollitia aperiam.</p>
                 <a href="" target="_blank">READ MORE</a>
             </section>
             <section class="card">
-                <img src="./IMAGENS/corvette.png" class="card-image" alt="imagem de um convette">
+                <img src="IMAGENS/corvette.png" class="card-image" alt="imagem de um convette">
                 <h2>CAR 2</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium neque sapiente voluptates eos alias animi iusto hic! Sit officia modi molestiae consequuntur. Accusantium repellendus a minima at, quaerat doloremque vel.</p>
                 <a href="" target="_blank">READ MORE</a>
             </section>
             <section class="card">
-                <img src="./IMAGENS/lamborghini.png" class="card-image" alt="imagem de uma lamborghini">
+                <img src="IMAGENS/lamborghini.png" class="card-image" alt="imagem de uma lamborghini">
                 <h2>CAR 3</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod impedit doloribus maxime error iste, omnis nemo itaque ad fugiat culpa porro velit inventore vero voluptate! Adipisci mollitia ab tempora nihil.</p>
                 <a href="" target="_blank">READ MORE</a>
